# signal-classifier

./: .gitignore  CMakeLists.txt  README.md
classifier/: CMakeLists.txt  main.cpp  mhai_array.icd  nn_provider.cpp  signal_classifier.cpp  static_model.cpp
classifier/headers/: nn_provider.h  signal_classifier.h  static_model.h
trainer/: CMakeLists.txt  dataset_loader.cpp  dataset_provider.cpp  main.cpp  nnmodel_trainer.cpp
trainer/headers/: dataset_loader.h  dataset_provider.h  nnmodel_trainer.h
